# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/communication/netstack/netstack_config.gni")

rust_cxx("netstack_rs_cxx_gen") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("netstack_rs_cxx") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "include",
    "${target_gen_dir}/src",
  ]
  sources = [
    "src/cxx/wrapper.cpp",
    "src/cxx/cache_proxy_ani.cpp",
  ]

  sources += get_target_outputs(":netstack_rs_cxx_gen")

  deps = [
    ":netstack_rs_cxx_gen",
    "$NETSTACK_INNERKITS_DIR/http_client:http_client",
    "$NETSTACK_DIR/utils:stack_utils_common",
  ]

  external_deps = [
    "rust_cxx:cxx_cppdeps",
    "cJSON:cjson",
  ]

  part_name = "netstack"
  subsystem_name = "communication"
}

ohos_rust_shared_library("netstack_rs") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "src/lib.rs" ]

  deps = [
    ":netstack_rs_cxx",
    "../ffrt_rs:ffrt_rs",
    "$NETSTACK_DIR/frameworks/ets/ani/common:netstack_common",
  ]

  external_deps = [
    "hilog:hilog_rust",
    "rust_cxx:lib",
    "netmanager_base:ani_rs",
    "bounds_checking_function:libsec_shared",
  ]

  part_name = "netstack"
  subsystem_name = "communication"
}