# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

if (!defined(global_parts_info) ||
    defined(global_parts_info.commonlibrary_ylong_http)) {
  has_commonlibrary_ylong_http = true
} else {
  has_commonlibrary_ylong_http = false
}

ohos_rust_shared_library("ylong_http_client") {
  crate_name = "ylong_http_client"
  crate_type = "dylib"
  crate_root = "src/lib.rs"

  install_images = [ system_base_dir ]
  subsystem_name = "communication"
  part_name = "netstack"

  sources = [ "src/lib.rs" ]
  edition = "2021"
  clippy_lints = "none"
  if (has_commonlibrary_ylong_http) {
    external_deps = [ "ylong_http:ylong_http_client_inner" ]
  }
  features = [
    "default",
    "ylong_impl",
  ]
}
