# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netstack/netstack_config.gni")

ohos_shared_library("net_http_ndk") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  output_name = "net_http"
  output_extension = "so"
  include_dirs = [
    "$NETSTACK_DIR/interfaces/kits/c/net_http/include",
    "$NETSTACK_DIR/interfaces/kits/c/common",
    "$NETSTACK_DIR/interfaces/innerkits/http_client/include",
    "$NETSTACK_DIR/frameworks/native/http/http_client/include",
    "$NETSTACK_DIR/utils/log/include",
    "$NETSTACK_DIR/utils/common_utils/include",
  ]

  sources = [
    "src/net_http_c.cpp",
    "../common/netstack_hash_map.cpp"
  ]

  deps = [ 
    "$NETSTACK_DIR/interfaces/innerkits/http_client:http_client",
    "$NETSTACK_DIR/utils:stack_utils_common"
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [
    "-Wall",
    "-Werror",
  ]

  part_name = "netstack"
  subsystem_name = "communication"
  relative_install_dir = "ndk"
}