# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netstack/netstack_config.gni")

ohos_shared_library("net_ssl_ndk") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  output_name = "net_ssl"
  output_extension = "so"
  include_dirs = [
    "$NETSTACK_DIR/interfaces/kits/c/net_ssl/include",
    "$NETSTACK_DIR/interfaces/innerkits/net_ssl/include",
    "$NETSTACK_DIR/frameworks/native/net_ssl/include",
    "$NETSTACK_DIR/utils/log/include",
  ]

  sources = [ "$SUBSYSTEM_DIR/netstack/frameworks/js/napi/websocket/websocket_module/src/net_ssl_c.cpp" ]

  deps = [ "$NETSTACK_DIR/interfaces/innerkits/net_ssl:net_ssl" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "netmanager_base:net_security_config_if",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "samgr:samgr_proxy",
    "netmanager_base:net_manager_common",
  ]

  cflags_cc = [
    "-Wall",
    "-Werror",
  ]

  part_name = "netstack"
  subsystem_name = "communication"
  relative_install_dir = "ndk"
}
